# Pixelate

./: .#MakeImage.cpp  CMakeLists.txt  ColorMatch.cpp  ColorMatch.hpp  LegoColorClass.cpp  LegoColorClass.hpp  MakeImage.cpp  MakeImage.hpp  Pixelate.cpp  Pixelate.hpp  README.md  main.cpp
